02-17 spring MVC구조 컨트롤러 수업 월요일

--- a/boot02/src/main/resources/application.properties
+++ b/boot02/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=boot01
 
 ## Server
 server.port=8095
+## server.servlet.context-path=yd
 
 ## DB : Oracle => HikariCP
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
