--- a/boot03/src/main/resources/application.properties
+++ b/boot03/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=boot03
+
+# server
+server.port=8099
+
+# datasoruce DB : Oracle => HikariCP
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=hr
+spring.datasource.password=hr
+
+# mybatis
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.jdbc-type-for-null=VARCHAR
+mybatis.type-aliases-package=com.yedam.app
+mybatis.mapper-locations=classpath:mapper/*/*.xml
+
+# log
+logging.level.com.yedam.app=DEBUG
+logging.level.web=DEBUG
